libs/parser/testdata/fixtures/negative/source_missing_colon.csl
source
	alias: 'missing'
	type: 'test'
